--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngneat/elf": "2.4.0",
     "@ngneat/elf-devtools": "1.3.0",
     "@ngneat/elf-persist-state": "1.2.0",
+    "angularexampleapp": "file:",
     "apollo-angular": "6.0.0",
     "bootstrap": "5.2.3",
     "class-validator": "0.14.0",
