--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "eslint-plugin-rxjs-angular": "2.0.1",
     "eslint-plugin-security": "1.7.1",
     "eslint-plugin-sonarjs": "0.23.0",
-    "husky": "8.0.3",
+    "husky": "^8.0.3",
     "jasmine-core": "5.1.1",
     "karma": "6.4.2",
     "karma-chrome-launcher": "3.2.0",
